# Taskwright-AI

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.development-history/: 2026-06-19-auto-update-and-release.md  2026-06-19-block-drop-doing.md  2026-06-19-column-status-tint.md  2026-06-19-finish-notifications.md  2026-06-19-fix-dragdrop.md  2026-06-19-more-cli-providers.md  2026-06-19-queue-concurrency.md  2026-06-19-rebrand-taskwright-ai.md  2026-06-19-remove-workspace-confirm.md  2026-06-19-ui-polish-layer.md  2026-06-20-dnd-reorder.md  2026-06-20-docs-site-github-pages.md  2026-06-20-repo-polish-and-docs.md  2026-06-20-settings-panel.md  2026-06-20-spinner-reduced-motion-fix.md  2026-06-20-ws-add-icon-button.md  2026-06-20-ws-remove-icon-button.md
.github/workflows/: docs.yml  release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  ipc_pattern.md  permissions.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/: architecture.md  build-and-release.md  development.md
docs/superpowers/specs/: 2026-06-19-auto-update-and-release-design.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  runner.rs  store.rs
website/: index.html  styles.css
